added custom event for login user
