# server/docs/swagger.json
@@ -327,6 +327,12 @@
                         "schema": {
                             "$ref": "#/definitions/common.ErrorResponseDto"
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/common.ErrorResponseDto"
+                        }
                     }
                 }
             }
